Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.11, 6.4.0
-
None
-
-
0d8837c41 (dev), e7208d638 (6.4), b9ba498a1 (6.5), 1d31b7a88 (tqtc/lts-6.2)
-
DaVinci 71, DaVinci 72
Description
Trying to `make docs` resulted in lots of errors like this:
./Qt-5.15.11_build/qtbase/src/gui/painting/qbrush.cpp:661: (qdoc) warning: clang found diagnostics parsing \fn void QBrush::swap(QBrush &other) error: use of undeclared identifier 'QBrush' error: unknown type name 'QBrush'
The build log also showed lots of "QIODevice::write: device not open" entries.
It turned out that QDoc created lots of truncated header files, by closing a QFile before the QTextStream operating on it had flushed all its buffered content (see https://codereview.qt-project.org/gitweb?p=qt/qttools.git;a=blob;f=src/qdoc/clangcodeparser.cpp;h=2caa39edeaa153b7e3f245b82d92530f960766aa;hb=HEAD#l1428)
The attached patch fixes the issue.
I encountered the issues with Qt 5.15.11 building on macOS Monterey with XCode 13.4.1 (SDK 12.3), but I think this affects all Qt versions and all platforms.
Attachments
For Gerrit Dashboard: QTBUG-109614 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
456587,1 | qdoc: Ensure the generated temporary header file is closed properly | tqtc/lts-5.15 | qt/tqtc-qttools | Status: NEW | 0 | 0 |
455941,3 | qdoc: Ensure the generated temporary header file is closed properly | dev | qt/qttools | Status: MERGED | +2 | 0 |
456579,2 | qdoc: Ensure the generated temporary header file is closed properly | 6.5 | qt/qttools | Status: MERGED | +2 | 0 |
456580,2 | qdoc: Ensure the generated temporary header file is closed properly | 6.4 | qt/qttools | Status: MERGED | +2 | 0 |
456586,2 | qdoc: Ensure the generated temporary header file is closed properly | tqtc/lts-6.2 | qt/tqtc-qttools | Status: MERGED | +2 | 0 |